@@ -1,4 +1,8 @@
 ﻿$Rev$
+[2007/08/26]
+DirBrowser.py svn_plugin
+                    Improvement. Adding icon set used to indicate svn status
+                    
 [2007/08/25]
 DirBrowser.py SvnSupport.py mRun.py
                     Add refreshing current folder functionality after the svn 
